2011-May-14 Chris Morley

	* mesmer1.xsl: Add a section that compares experimental and calculated
	rates, yields and eigenvalues.
	Display Bartis Widom warning if present.
	Display "All eigenvalues" if @selection <=0

2011-May-14 Struan Robertson

	* System.cpp: Build break fix.

2011-May-14 Struan Robertson

	* System.cpp,CollisionOperator.h/.cpp: Addition of expt. yields to
	the Chi^2 definition.

2011-May-14 Chris Morley

	* src/plugins/fitting.cpp: add Chi^2 to XML file	
	* mesmer1.xsl: ...and to Firefox output
	
	* src/System.h, src/System.cpp, src/unitsConversion.h: when reading
	<experimentalRates>,etc., save the PersistPointer and add the calculated
	values as an attribute after fitting.

2011-May-13 Struan Robertson

	* System.cpp: Minor change relating to addition of expt. 
	eigenvalues to the Chi^2 definition.

2011-May-10 Struan Robertson

	* System.cpp,unitsConversion.h,CollisionOperator.h/.cpp: Addition of expt. 
	eigenvalues to the Chi^2 definition.

2011-May-6 Struan Robertson

	* System.h/cpp,unitsConversion.h: Further changes toward an extended Chi^2
	definition.

2011-May-2 Struan Robertson

	* System.cpp,unitsConversion.h: Initial changes toward an extended Chi^2
	definition.

2011-May-1 Struan Robertson

	* MESMER manual.doc: Added text on WKB tunnelling.

2011-April-17 Struan Robertson

	* MolecularComponents.h/.cpp: Transition state imaginary frequencies are now
	of type Rdouble to allow for fitting.

2011-April-17 Struan Robertson

	* WKBTunnellingCoefficients.cpp: Refactoring of WKB tunnelling method.

2011-April-16 Struan Robertson

	* WKBTunnellingCoefficients.cpp: Initial revision of WKB tunnelling method (checked 
	in on behalf of Robin Shannon).
	* Examples/Tunnelling: WKB tunnelling test and baseline.

2011-April-16 Chris Morley

	* mesmer1.xsl, punch.xsl: added loss rates to 'punch' output, as requested
	by Robin.

2011-April-15 Struan Robertson

	* CollisionOperator.cpp/.h,System.cpp/.h: Introduced precision enum for clarity.