@@ -44,7 +44,8 @@ namespace mesmer
       m_periodicity(1),
       m_potentialCosCoeff(),
       m_expansion(4),
-	  m_energyLevels() {}
+	  m_energyLevels(),
+	  m_plotStates(false) {}
 
     virtual ~HinderedRotorQM1D() {}
     virtual HinderedRotorQM1D* Clone() { return new HinderedRotorQM1D(*this); }
@@ -53,6 +54,9 @@ namespace mesmer
 
     // Calculate cosine coefficients from potential data points.
     void CosineFourierCoeffs(vector<double> &angle, vector<double> &potential) ;
+
+	// Provide data for plotting states against potential.
+	void outputPlotData() ;
 
     std::string m_bondID;
 
@@ -64,6 +68,8 @@ namespace mesmer
     size_t m_expansion ;                 // Number of coefficients in the cosine expansion.
 
 	vector<double> m_energyLevels ;	     // The energies of the hindered rotor states.
+	
+	bool m_plotStates ;                  // If true output data for plotting. 
 
   } ;
 
@@ -220,7 +226,14 @@ namespace mesmer
 
     }
 
-    return true;
+    // Check if is data for plotting are required.
+
+    pp = ppDOSC->XmlMoveTo("me:PlotStates") ;
+    if (pp) {
+	  m_plotStates = true ;
+	}
+
+	return true;
   }
 
   //
@@ -303,6 +316,10 @@ namespace mesmer
 
     pDOS->setCellDensityOfStates(tmpCellDOS) ;
 
+	// If required, created graphical date.
+	if (m_plotStates) 
+	  outputPlotData() ;
+
     return true;
 
   }
@@ -375,6 +392,24 @@ namespace mesmer
 
     return ;
 
+  }
+
+  // Provide data for plotting states against potential.
+  void HinderedRotorQM1D::outputPlotData() {
+
+    cinfo << endl << "Hindered rotor data for plotting." << endl << endl ;
+    size_t npoints(1000) ;
+	double dAngle = M_PI/double(npoints) ;
+    for (size_t i(0); i < npoints; ++i) {
+      double sum(0.0) ;
+	  double angle = double(i)*dAngle ;
+      for(size_t k(0); k < m_expansion; ++k) {
+        double nTheta = double(k) * angle;
+        sum += m_potentialCosCoeff[k] * cos(nTheta);
+      }
+      cinfo << formatFloat(angle, 6, 15) << formatFloat(sum, 6, 15) << endl ;
+    }
+    cinfo << endl ;
   }
 
 }//namespace
